<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:id="@+id/menu_group_1">
        <item
            android:id="@+id/menu_datasource"
            android:icon="@drawable/ic_datasource"
            android:title="@string/data_source" />
        <item
            android:id="@+id/menu_theme"
            android:icon="@drawable/ic_theme"
            android:title="@string/my_theme" />
        <item
            android:id="@+id/menu_style"
            android:icon="@drawable/icon_style"
            android:title="@string/my_style" />
        <item
            android:id="@+id/menu_download"
            android:icon="@drawable/ic_dowload"
            android:title="@string/download" />
        <item
            android:id="@+id/menu_folder"
            android:icon="@drawable/ic_folder"
            android:title="@string/folder" />

    </group>
    <group android:id="@+id/menu_group_2">
        <item
            android:id="@+id/menu_settings"
            android:title="@string/setting" />
        <item
            android:id="@+id/menu_about"
            android:title="@string/about" />
    </group>
</menu>