<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.StyleActivity">

    <data>

        <variable
            name="viewModel"
            type="com.hacknife.atlas.ui.viewmodel.IStyleViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary">

            <ImageView
                android:id="@+id/iv_back"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_centerVertical="true"
                android:layout_marginRight="10dp"
                android:paddingVertical="7dp"
                app:srcCompat="@drawable/ic_arrow_back_white" />

            <TextView
                android:id="@+id/toolbar_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:text="@string/my_style"
                android:textColor="@color/white"
                android:textSize="16dp" />
        </androidx.appcompat.widget.Toolbar>

        <com.scwang.smartrefresh.layout.SmartRefreshLayout
            android:id="@+id/refresh"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:srlEnableLoadMore="false"
            app:srlEnableOverScrollBounce="true"
            app:srlEnableOverScrollDrag="true"
            app:srlEnableRefresh="false">

            <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginVertical="20dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/image_collection"
                        android:textColor="?attr/colorPrimary"
                        android:textSize="16sp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/iv_collection_4x4"
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            android:background="@null"
                            android:src="@drawable/style_4x4" />


                        <View
                            android:layout_width="30dp"
                            android:layout_height="1dp" />

                        <ImageView
                            android:id="@+id/iv_collection_9x9"
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            android:background="@null"
                            android:src="@drawable/style_9x9" />
                    </LinearLayout>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="20dp"
                        android:text="@string/image_collection_height"
                        android:textColor="?attr/colorPrimary"
                        android:textSize="12sp" />

                    <SeekBar
                        android:id="@+id/seekBar"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:max="60"
                        android:maxHeight="10dp"
                        android:progress="30"
                        android:thumb="@drawable/seek_bar_thumb" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="50dp"
                        android:text="@string/image_detail"
                        android:textColor="?attr/colorPrimary"
                        android:textSize="16sp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/iv_detail_4x4"
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            android:background="@null"
                            android:src="@drawable/style_4x4" />

                        <View
                            android:layout_width="30dp"
                            android:layout_height="1dp" />

                        <ImageView
                            android:id="@+id/iv_detail_9x9"
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            android:background="@null"
                            android:src="@drawable/style_9x9" />
                    </LinearLayout>
                </LinearLayout>
            </androidx.core.widget.NestedScrollView>
        </com.scwang.smartrefresh.layout.SmartRefreshLayout>
    </LinearLayout>


</layout>